tests/invalid/purity/impure_pred_t2.err_exp
impure_pred_t2.m:018: In call to impure predicate `impure_pred_t2.get_counter/2':
impure_pred_t2.m:018:   purity error: call must be preceded by `impure' indicator.
impure_pred_t2.m:012: In predicate `impure_pred_t2.main/2':
impure_pred_t2.m:012:   purity error: predicate is impure.
impure_pred_t2.m:012:   It must be declared `impure' or promised pure.
For more information, try recompiling with `-E'.
